@@ -31,6 +31,7 @@
             <align>left</align>
             <aligny>center</aligny>
             <textcolor>white</textcolor>
+			<label>$ADDON[pvr.wmc 30120]$ADDON[pvr.dvblink 32014]</label>
         </control>
         <control type="group">
             <posx>40</posx>
@@ -43,7 +44,7 @@
                 <posy>0</posy>
                 <height>40</height>
                 <width>720</width>
-                <label>$ADDON[pvr.wmc 30121]</label>
+                <label>$ADDON[pvr.wmc 30121]$ADDON[pvr.dvblink 32015]</label>
                 <font>Reg27</font>
                 <textcolor>white</textcolor>
                 <align>left</align>
@@ -59,7 +60,7 @@
                 <posy>45</posy>
                 <height>40</height>
                 <width>720</width>
-                <label>$ADDON[pvr.wmc 30122]</label>
+                <label>$ADDON[pvr.wmc 30122]$ADDON[pvr.dvblink 32016]</label>
                 <font>Reg27</font>
                 <textcolor>white</textcolor>
                 <align>left</align>
